<resources>
    <string name="app_name">Requisition_invite_recyclerview</string>
    <string name="requisition">REQUISITION</string>
    <string name="no1">1</string>
    <string name="no2">2</string>
    <string name="no3">3</string>
    <string name="no4">4</string>
    <string name="no5">5</string>
    <string name="no6">6</string>
    <string name="INVITE">INVITE PEOPLE</string>
    <string name="sentence">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="ADDPEOPLE">ADD PEOPLE</string>
    <string name="todo">TODO</string>
    <string name="Save">SAVE DRAFT</string>
    <string name="todo1">TODO</string>
</resources>
