<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorGray">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:maxWidth="100dp"
                android:src="@drawable/image"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/todo" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="@color/colorBrown"
            android:layout_marginTop="40dp" >
            <TextView
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:text="@string/requisition"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp" />
            <TextView

                android:id="@+id/TextView01"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/circle2"
                android:layout_marginTop="60dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="30dp"
                android:text="@string/no1"
                android:textAlignment="center"
                android:layout_marginStart="30dp"
                android:layout_alignParentStart="true" />
            <TextView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/textline"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="60dp"
                android:layout_marginStart="50dp" />

            <TextView

                android:id="@+id/TextView03"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/circle2"
                android:layout_marginTop="60dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="70dp"
                android:text="@string/no2"
                android:textAlignment="center"
                android:layout_marginStart="70dp"
                android:layout_alignParentStart="true" />
            <TextView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/textline"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="60dp"
                android:layout_marginStart="90dp" />

            <TextView

                android:id="@+id/TextView04"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/circle2"
                android:layout_marginTop="60dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="110dp"
                android:text="@string/no3"
                android:textAlignment="center"
                android:layout_marginStart="110dp"
                android:layout_alignParentStart="true" />
            <TextView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/textline"
                android:layout_marginLeft="130dp"
                android:layout_marginTop="60dp"
                android:layout_marginStart="130dp" />
            <TextView

                android:id="@+id/TextView05"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/circle"
                android:layout_marginTop="60dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="150dp"
                android:text="@string/no4"
                android:textColor="#FFFFFF"
                android:textAlignment="center"
                android:layout_marginStart="150dp"
                android:layout_alignParentStart="true" />
            <TextView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/textline"
                android:layout_marginLeft="170dp"
                android:layout_marginTop="60dp"
                android:layout_marginStart="170dp" />
            <TextView

                android:id="@+id/TextView06"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/circle2"
                android:layout_marginTop="60dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="190dp"
                android:text="@string/no5"
                android:textAlignment="center"
                android:layout_marginStart="190dp"
                android:layout_alignParentStart="true" />
            <TextView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/textline"
                android:layout_marginLeft="210dp"
                android:layout_marginTop="60dp"
                android:layout_marginStart="210dp" />
            <TextView

                android:id="@+id/TextView02"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/circle2"
                android:layout_marginTop="60dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="230dp"
                android:text="@string/no6"
                android:textAlignment="center"
                android:layout_marginStart="230dp"
                android:layout_alignParentStart="true" />


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_marginTop="150dp"
            android:background="@color/colorBack">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:paddingTop="20dp"
                android:text="@string/INVITE"
                android:textColor="@color/coloratt"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:paddingTop="10dp"
                android:text="@string/sentence"
                android:textColor="@color/colorsentence"
                />
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/image2"
                android:layout_alignParentRight="true"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:contentDescription="@string/todo1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ADDPEOPLE"
                android:textColor="@color/coloratt"
                android:textStyle="bold"
                android:layout_alignParentRight="true"
                android:layout_marginRight="30dp"
                android:paddingTop="50dp"
                android:layout_marginEnd="30dp"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="280dp"

            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/savedraft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Save"
                android:textStyle="bold"
                android:textColor="@color/colorSave"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:paddingBottom="15dp"
                android:layout_marginTop="550dp"
                android:background="@drawable/borderbutton"/>
            <Button
                android:id="@+id/button"
                android:layout_height="30dp"
                android:layout_width="wrap_content"
                android:text="NEXT -->"
                android:textSize="12dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="550dp"
                android:paddingBottom="1dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/button"
                android:textColor="#FFFFFF"
                />
        </RelativeLayout>
    </RelativeLayout>


</RelativeLayout>